syntax = "proto3";

package simple;

service SimpleService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayGoodBye (GoodbyeRequest) returns (GoodbyeResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string helloMessage = 1;
}

message GoodbyeRequest {
  HelloRequest name = 1;
}

message GoodbyeResponse {
  string goodbyeMessage = 1;
}